# Project-Axium

./: .gitignore  PROJECT_PLAN.md  README.md  package-lock.json
backend/: README.md  ai_service.py  game_manager.py  linkedin_scraper.py  main.py  models.py  pyproject.toml  requirements.txt  web_scraper.py  wikipedia_scraper.py
backend/backend/videos/: scrape_https:__en.wikipedia.org_wiki_Elephant_1765870831.webm  scrape_https:__en.wikipedia.org_wiki_Muskrat_1765870828.webm
frontend/: package-lock.json
frontend/src/app/: page.tsx
