[project]
name = "linkedin-roast-battle-backend"
version = "1.0.0"
description = "Backend API for LinkedIn Roast Battle game"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "transformers==4.35.0",
    "sentencepiece==0.1.99"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.wheel.force-include]
"ai_service.py" = "ai_service.py"
"game_manager.py" = "game_manager.py"
"main.py" = "main.py"
"models.py" = "models.py"
"README.md" = "README.md"



